--- a/app/globals.css
+++ b/app/globals.css
@@ -56,3 +56,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+    /* custom scrollbar */
+    ::-webkit-scrollbar {
+      width: 17px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: hsl(var(--muted));
+      border-radius: 20px;
+      border: 6px solid transparent;
+      background-clip: content-box;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: hsl(var(--muted));
+    }
